# python-scaffold

./: .autocorrectrc  .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  main.py  pyproject.toml  test.md  test_lint.py
.github/workflows/: lint.yml
